# pofolpark

./: .gitignore  EXAMPLE.md  README.md  render.yaml
.codesandbox/: tasks.json
backend/: build.sh  celerybeat-schedule.dir  pyproject.toml
backend/chatgpt/: urls.py  views.py
backend/common/: models.py
backend/common/migrations/: 0001_initial.py
backend/config/: celery.py  settings.py  urls.py
backend/lucky_draw/: urls.py  views.py
backend/weathers/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/weathers/management/commands/: update_weather.py
backend/weathers/migrations/: 0001_initial.py  0002_alter_weather_latitude_alter_weather_longitude.py  0003_alter_weather_temperature_value.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: api.ts  index.tsx  router.tsx  service-worker.ts  theme.ts  types.d.ts
frontend/src/assets/: weather.json  weather2.json
frontend/src/components/: Footer.tsx  Header.tsx  Root.tsx  Site.tsx  SiteSkeleton.tsx
frontend/src/routes/: Home.tsx  NotFound.tsx  Policy.tsx  StateGenerator.tsx  TodoPage.tsx  TransTodo.tsx
frontend/src/routes/InstaBrain/: Main.tsx
frontend/src/routes/LuckyDraw/: Main.tsx
frontend/src/routes/SuitableTemperature/: Detail.tsx  Main.tsx  Search.tsx
frontend/src/routes/TransTodo/: TransTodo.tsx
frontend/src/utils/: api.ts  suitableTemperatureUtils.ts
pofolpark-backend/: pyproject.toml
